[gd_scene load_steps=13 format=3 uid="uid://dojir8maradd1"]

[ext_resource type="Script" uid="uid://br3agbx2aibvw" path="res://Script/choose_player.gd" id="1_hjpbw"]
[ext_resource type="StyleBox" uid="uid://b5bgnb18smebi" path="res://Scene/Elendors_hover.tres" id="2_ag6i8"]
[ext_resource type="FontFile" uid="uid://bdl4qpamcrivq" path="res://Fonts/OBGB.TTF" id="2_anguy"]
[ext_resource type="StyleBox" uid="uid://b6ybeu3s5kjqs" path="res://Scene/Elendros.tres" id="3_70qnk"]
[ext_resource type="Texture2D" uid="uid://bjianu5yuh6nr" path="res://Asset_Midterm/UI/Player_UI/Game Scene Final2_20250818235203.jpg" id="4_70qnk"]
[ext_resource type="StyleBox" uid="uid://pm8biavnq6lc" path="res://Scene/Nymera.tres" id="5_70qnk"]
[ext_resource type="Texture2D" uid="uid://q3s1a5fpkwu8" path="res://Asset_Midterm/UI/Player_UI/Char design4_20250820104850.png" id="6_70qnk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n8adk"]
bg_color = Color(0.491421, 0.240528, 0.150273, 1)

[sub_resource type="LabelSettings" id="LabelSettings_acv0x"]
font = ExtResource("2_anguy")
font_size = 150

[sub_resource type="LabelSettings" id="LabelSettings_1ny1f"]
font = ExtResource("2_anguy")
font_size = 100

[sub_resource type="CanvasTexture" id="CanvasTexture_70qnk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_70qnk"]
texture = ExtResource("6_70qnk")
region_rect = Rect2(547, 285, 644.558, 1064.8)
modulate_color = Color(0.713726, 0.713726, 0.713726, 1)

[node name="Choose_player" type="Node2D"]
scale = Vector2(1.35297, 1.35648)
script = ExtResource("1_hjpbw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n8adk")

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel"]
modulate = Color(1, 1, 1, 0.0509804)
layout_mode = 0
offset_left = 923.0
offset_top = 261.0
offset_right = 2203.0
offset_bottom = 501.0
text = "Elendros"
label_settings = SubResource("LabelSettings_acv0x")

[node name="Elendros" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 3.49777
anchor_top = -7.375
anchor_right = 3.49777
anchor_bottom = -7.375
offset_left = -32.0
offset_top = -200.0
offset_right = 376.0
offset_bottom = 407.0
scale = Vector2(2.0175, 2.0175)
focus_mode = 0
theme_override_styles/hover = ExtResource("2_ag6i8")
theme_override_styles/pressed = ExtResource("2_ag6i8")
theme_override_styles/normal = ExtResource("3_70qnk")
metadata/_edit_use_anchors_ = true

[node name="ElendrosNameLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = -369.0
offset_top = -433.0
offset_right = 310.0
offset_bottom = -306.0
text = "Elendros"
label_settings = SubResource("LabelSettings_1ny1f")

[node name="Polygon2D" type="Polygon2D" parent="CanvasLayer/Control"]
position = Vector2(-694.396, -277.315)
color = Color(0.109402, 0.152339, 0.266934, 1)
texture = SubResource("CanvasTexture_70qnk")
polygon = PackedVector2Array(-280.604, -264.685, 1756.4, 880.315, -302.604, 859.315)
uv = PackedVector2Array(1.80603, 0.241846, 766.781, 573.47, -0.40741, 574.934)

[node name="Label" type="Label" parent="CanvasLayer/Control/Polygon2D"]
modulate = Color(1, 1, 1, 0.0509804)
offset_left = -146.604
offset_top = 258.315
offset_right = 1133.4
offset_bottom = 498.315
text = "Nymera"
label_settings = SubResource("LabelSettings_acv0x")

[node name="GameSceneFinal220250818235203" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
position = Vector2(18.2408, 17.6391)
scale = Vector2(0.612884, 0.612884)
texture = ExtResource("4_70qnk")

[node name="Nymera" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -14.225
anchor_top = -6.95
anchor_right = -13.3
anchor_bottom = -5.1
offset_left = -294.0
offset_top = -104.0
offset_right = -6.0
offset_bottom = 352.0
scale = Vector2(2.0175, 2.0175)
focus_mode = 0
theme_override_styles/hover = ExtResource("5_70qnk")
theme_override_styles/pressed = ExtResource("5_70qnk")
theme_override_styles/normal = SubResource("StyleBoxTexture_70qnk")
metadata/_edit_use_anchors_ = true

[node name="NymeraNameLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = -90.0
offset_top = 355.0
offset_right = 589.0
offset_bottom = 482.0
text = "Nymera"
label_settings = SubResource("LabelSettings_1ny1f")

[connection signal="mouse_entered" from="CanvasLayer/Control/Elendros" to="." method="_on_elendros_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Control/Elendros" to="." method="_on_elendros_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Control/Elendros" to="." method="_on_elendros_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Control/Nymera" to="." method="_on_nymera_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Control/Nymera" to="." method="_on_nymera_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Control/Nymera" to="." method="_on_nymera_pressed"]
